refactor: Enhance logging in TodoController for better traceability and error handling